fixed : [CSS] specificity too low for divider and spacer module

--- a/assets/front/scss/modules/_divider.scss
+++ b/assets/front/scss/modules/_divider.scss
@@ -5,7 +5,7 @@
         line-height: 0;
     }
 }
-.#{$project-prefix}divider {
+.sek-module-inner .sek-divider {
     border-top: 1px solid #5a5a5a;
     display: inline-block;
     width: 100%;
