--- a/assets/front/scss/modules/_spacer.scss
+++ b/assets/front/scss/modules/_spacer.scss
@@ -1,3 +1,3 @@
-.#{$project-prefix}spacer {
+.sek-module-inner .sek-spacer {
     height: 20px;
 }
